<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">alpha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="view">查看(V)</string>
    <string name="edit">编辑(E)</string>
    <string name="help">帮助(H)</string>
    <string name="other">其他(O)</string>
    <string name="mc">Timer</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mplus">Browser</string>
    <string name="mminus">RMB</string>
    <string name="left">Battery</string>
    <string name="ce">CE</string>
    <string name="c">清除</string>
    <string name="pm">+-</string>
    <string name="yes">GPS</string>
    <string name="div">/</string>
    <string name="percent">Bus</string>
    <string name="multiply">*</string>
    <string name="x">Line</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">This is developed by Willie Gallery</string>
    <string name="commit">输完请点击</string>
    <string name="hint">输入你想输的内容</string>
    <string name="menu_settings">Settings</string>
    <string name="company">打开辅助功能</string>
    <string name="redbag">启动红包领取服务</string>
    <string name="redbag_service">启动红包自动领取</string>

</resources>